# scanpy-diff

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: test.yml
comparison/: compare_de.py  cross_compare.R  diagnose.R  diagnose2.py  diagnose_log2fc.py  fair_compare.R  seurat_de.R
comparison/results_compare/: fair_comparison_correlations.csv  per_cluster_correlations.csv  scanpy_leiden_labels.csv  seurat_ttest_leiden_labels.csv  seurat_wilcox_leiden_labels.csv  summary_table.csv
comparison/results_seurat/: seurat_logreg_all_markers.csv  seurat_ttest_all_markers.csv  seurat_wilcox_all_markers.csv
scanpy_diff/: __init__.py  _diff.py  _stats.py  _utils.py  pl.py
tests/: test_diff.py
