[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scanpy-diff"
version = "0.1.0"
description = "A scanpy plugin for differential gene expression analysis, similar to Seurat's FindMarkers"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "scanpy-diff contributors" }]
keywords = [
    "bioinformatics",
    "single-cell",
    "RNA-seq",
    "differential expression",
    "scanpy",
    "seurat",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "scanpy>=1.9.0",
    "anndata>=0.9.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "statsmodels>=0.13.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "igraph>=1.0.0",
    "leidenalg>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
pydeseq2 = ["pydeseq2>=0.4.0"]

[tool.hatch.build.targets.wheel]
packages = ["scanpy_diff"]

# ---------------------------------------------------------------------------
# Dependency groups (PEP 735, supported by uv)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
